test/tests/compiler/8_loops/invalid_semantics/extra_credit/labeled_break_outside_loop.plx
pub fn main(none) i32 {
    #  make sure our usual analysis of break/continue labels also traverses labeled statements
    label a_label
    break
    return 0
}
